<resources>
    <string name="app_name">MyTechnical</string>
    <string name="title">MyTechnical</string>
    <string name="next">Continue</string>
    <string name="password">Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>

    <string name="changepassword">Change Password</string>
    <string name="Email">Email</string>
    <string name="btnChangePass" translatable="false"></string>

    <string name="btnCongratulations" translatable="false"></string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="congartulationsv2">YOU AREA SUCCESSFULLY</string>
    <string name="congratulationsv3">CHANGE YOUR PASSWORD</string>
    <string name="Login">Login</string>

    <string name="ForgoPassword">Forgot Password</string>
    <string name="Forgot">Forgot</string>

    <string name="services">Services</string>
    <string name="menu_supportPC">PC Technical Support</string>
    <string name="menu_supporLaptop">Laptop Technical Support</string>
    <string name="menu_instalationNetwork">Network Installation</string>
    <string name="menu_instalationSoft">Software Installation</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_term">Terms and Conditions</string>
    <string name="menu_editInfo">Edit Information</string>
    <string name="menu_LogOut">Log Out</string>

    <string name="Signup">Sign Up</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>

    <string name="termandconditions">Term and Conditions</string>
    <string name="term">These terms and conditions of use are made available to the user by MYTECHNICAL MOBILITY INFORMATION TECHNOLOGY PTE. LTD. (hereinafter referred to as "MyTechnical" or the "Company"), a company duly incorporated under the laws of Mexico with address at C Salvador Novo 347, Pensadores Mexicanos, Aguascalientes Mexico.</string>

    <string name="Welcome">Welcome</string>
    <string name="signup">Sign Up</string>

    <string name="about">About</string>
    <string name="aboutinfo">MyTechnical is the platform to request technical service. We currently offer a wide range of services by application in Aguascalientes.Today we connect with a huge number of users through technical solutions through the application such as PC Technical Support, Laptop Technical Support, Network Installation and Software Installation.</string>

    <string name="passed">Your request has been completed successfully</string>

    <string name="contact">Contact</string>
    <string name="phonenumber">4491916004</string>
    <string name="appemail">18150339@aguascalientes.tecnm.mx</string>

    <string name="show">Show</string>
    <string name="mytechnicalservices">Services MyTechnical</string>
    <string name="mytechnicaldescription">At MyTechnical, we have created a work philosophy of attention, assistance and professional service with human quality.</string>
    <string name="mytechnicaldescriptionv2">We are a serious and consolidated Mexican company, formed by professionals in the services of Technical Support, Computer Equipment and Audiovisual.</string>
    <string name="knowus">Know Us</string>

    <string name="instalationnet">Server</string>
    <string name="instalationnet2">Switch connection</string>
    <string name="instalationnet3">Installation of Hard Drives for Network</string>
    <string name="instalationnet4">Network Installation</string>

    <string name="price">USD $5.11</string>

    <string name="instalationsoft">Antivirus installation</string>
    <string name="instalationsoft2">System installation</string>
    <string name="instalationsoft3">Installation of Office Package</string>
    <string name="instalationsoft4">Installation of Applications</string>

    <string name="servicename">Service Name</string>
    <string name="clientinfo">Client information</string>
    <string name="serviseinfo">Service information</string>
    <string name="payment">Payment method</string>
    <string name="cash">Cash</string>
    <string name="Paypal">Paypal</string>

    <string name="name">Name</string>
    <string name="lastName">LastName</string>
    <string name="phoneNumber">Phone number</string>

    <string name="changepass">Change Password</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="Suburb">Suburb</string>
    <string name="cp">CP</string>
    <string name="Save">Save</string>

    <string name="EquipmentCleaning">Equipment Cleaning</string>
    <string name="Antivirusupdate">Antivirus Update</string>
    <string name="SystemOptimization">System Optimization</string>
    <string name="ProgramUpdate">Program Update</string>
    <string name="operatingsystemrepair">Operating System Repair</string>
    <string name="Hardwareupgrade">Hardware upgrade</string>
    <string name="Removeantivirus">Virus Removal and Antivirus Installation</string>
    <string name="repairhard">Hardware Level Repair</string>

    <string name="Physicalexamination">Physical examination</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="CleaningComputer">Cleaning of computer equipment</string>
    <string name="Operatingsystem">Operating system update</string>
    <string name="backup">Information backup</string>
    <string name="RAMexpansion">RAM expansion</string>
    <string name="Recover">Recover of information</string>

    <string name="Termandconditions">Terms and Conditions</string>

    <string name="user">User Email</string>

    <string name="title_activity_menu" translatable="false"></string>
    <string name="menu_menu" translatable="false"></string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dialog">Waiting for answers from the technician</string>
    <string name="btnService">Show Order</string>
    <string name="messageservice">Technician on the way</string>
    <string name="tecnicalName">Technical Name</string>
    <string name="AddresTecnical">Addres:</string>
    <string name="tecnicalphone">Phone:</string>
    <string name="btnMap">Show Map</string>
    <string name="menu_title" translatable="false">MyTechnical</string>
    <string name="alfredo" translatable="false">Alfredo Luna Castro</string>
    <string name="dir">Student of the Information Technology and Communications Engineering career at the Technological Institute of Aguascalientes, Mexico</string>
    <string name="alfredoemail" translatable="false">Alfredolunacastro07@gmail.com</string>
    <string name="pablo" translatable="false">José pablo gonzalez martinez</string>
    <string name="pabloemail" translatable="false">jpgm.nomercy@gmail.com</string>
<<<<<<< Updated upstream

    <string name="invalid_mail" translatable="false">Ingrese un mail valido</string>
    <string name="invalid_password" translatable="false">Ingrese un password mayor a 6</string>

=======
    <string name="btnqualify">Qualify</string>
    <string name="rateService">Rate Service</string>
    <string name="Rating">Rating</string>
    <string name="invalid_mail">use another mail </string>
    <string name="invalid_password">Need more digits</string>
>>>>>>> Stashed changes

</resources>