<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContacFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/alfredo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/perfilalfredo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/alfredo"
                        tools:ignore="MissingClass" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/nombrealfredo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alfredo"
                            android:textColor="@color/black"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/telefono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dir"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/correoalfredo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/alfredoemail"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="(499) 191 60 04"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pablo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/perfilpablo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:src="@drawable/pablo"
                        tools:ignore="MissingClass" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/nombrepablo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pablo"
                            android:textColor="@color/black"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/telefonopablo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dir"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/correopablo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/pabloemail"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="(499) 109 79 36"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
